examples/test/testpolicy16671.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16671
  namespace: namespace104
spec:
  podSelector:
    matchLabels:
      key19: value3
      key26: value38
      key9: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value31
          key46: value22
          key23: value47
